# cs107-FinalProject

./: LICENSE  README.md  codecov.yml  requirements.txt  setup.cfg  setup.py
docs/: Documentation.html  Documentation.ipynb
src/: newton_draft.py  run_newton_example.py  salad.py  test_forward.py  utils.py
src/cs107_salad/Forward/: salad.py
src/cs107_salad/Optimization/: newton_draft.py  optimize.py
src/tests/: newton_draft.py  run_tests.sh  test_forward.py
tests/: run_test.sh  test_forward.py  test_optimize.py
