[metadata]
name = cs107_salad
version = 0.0.71
author = Neil Sehgal, Andrew Zhang, Diwei Zhang, Lotus Xia
author_email = neil_sehgal@g.harvard.edu, andrew_zhang@college.harvard.edu, diwei_zhang@hsph.harvard.edu, lxia@g.harvard.edu
description = Auto-Differentiation Program
long_description = file: README.MD
long_description_content_type = text/markdown
url = https://github.com/cs107-DaLand/cs107-FinalProject
project_urls =
    Bug Tracker = https://github.com/cs107-DaLand/cs107-FinalProject/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
          numpy

[options.packages.find]
where = src
